# biobert-mlflow-azure

./: .gitignore  README.md  pyproject.toml
classification/: mlflow_infer.py  mlflow_train.py
embeddings/: config.json  embeddings_infer.py  embeddings_log.py  model.py
embeddings/model/: conda.yaml
